Update and rename ML_project-Copy1.ipynb to News Analysis using NPL and clustering techniques.ipynb

--- a/News Analysis using NPL and clustering techniques.ipynb
+++ b/News Analysis using NPL and clustering techniques.ipynb
@@ -26,8 +26,7 @@
     "from pandas.io.json import json_normalize\n",
     "#loading JSON file\n",
     "with open('../data/top-headlines.json',encoding='utf-8') as f:\n",
-    "  data = json.load(f)\n",
-    "print(data)"
+    "  data = json.load(f)\n"
    ]
   },
   {
